<resources>
    <string name="app_name">iView Capstone</string>

    //Screen
    <string name="interviewimg">LET’S PREPARE YOUR INTERVIEW!</string>
    <string name="interview_desc">Be Prepare Yourself Here!</string>
    <string name="btn_screen">GET STARTED</string>

    //Authentication
    <string name="login">Welcome, please login!</string>
    <string name="login_btn">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>
    <string name="havent_account">Didn’t have an account? </string>
    <string name="already_have_account">Already have an account? </string>
    <string name="sign_up">REGISTER</string>
    <string name="sign_up_register">SIGN UP</string>
    <string name="password_confirm">Password Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Home
    //Navigation Bottom
    <string name="profile">Profil</string>
    <string name="notification">Notifikasi</string>
    <string name="home">Home</string>
    <string name="article">Artikel</string>
    <string name="scan">Scan Me</string>
    //Dashboard Awal
    <string name="hello">Hello, PrepMaster!</string>
    <string name="welcome">Get ready to explore and make the most of your time on iView.</string>
    <string name="chatbot">Chat Bot</string>
    <string name="record">Record</string>
    <string name="cek_score">Score</string>
    <string name="read_more">Read more...</string>

    //SCAN
    <string name="homepage">Home Page</string>
    <string name="scanyourface">Scan your face!</string>
    <string name="scan_deskripsi">Hello, PrepMaster! Please scan your face to check your interview readiness level</string>
    <string name="letscek">Lets check....</string>
    <string name="desc">Persiapan untuk wawancara yang baik melibatkan beberapa langkah untuk memastikan bahwa Anda tampil dengan percaya diri dan memberikan kesan yang baik kepada pihak yang mewawancarai. Berikut adalah beberapa langkah yang dapat Anda ambil:\n 1. Penelitian Tentang Perusahaan:
Pelajari sebanyak mungkin tentang perusahaan yang Anda lamar. Ketahui misi, visi, nilai-nilai, dan proyek-proyek terkini yang mereka kerjakan. Pahami juga industri di mana perusahaan beroperasi. \n 2. Pahami Posisi yang Dilamar:
Ketahui persyaratan pekerjaan, tugas-tugas yang diharapkan, dan keterampilan yang dibutuhkan. Persiapkan contoh-contoh konkret tentang bagaimana pengalaman dan keterampilan Anda sesuai dengan kebutuhan posisi tersebut. \n 3.Pelajari Pertanyaan Wawancara Umum:
Persiapkan jawaban untuk pertanyaan umum yang sering muncul dalam wawancara, seperti kelebihan dan kelemahan Anda, pengalaman terbaik, dan tantangan yang pernah Anda hadapi.</string>

    //Artikel

</resources>